--- a/Ecoordenador1.1/web/resources/relatorios/codigo-fonte/professorTurno.jrxml
+++ b/Ecoordenador1.1/web/resources/relatorios/codigo-fonte/professorTurno.jrxml
@@ -64,7 +64,7 @@ and pl.ano=$P{ano} and pl.semestre=$P{semestre}]]>
 			</textField>
 			<image>
 				<reportElement uuid="5dc24647-f9df-4ac7-a27f-e9eb7af63cab" x="0" y="0" width="343" height="85"/>
-				<imageExpression><![CDATA["/home/cesar/NetBeansProjects/TCC/trunk/Ecoordenador1.1/web/resources/images/topo_ifto.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["C:\\Users\\daniel\\Documents\\NetBeansProjects\\eCoordenador\\trunk\\Ecoordenador1.1\\web\\resources\\images\\topo_ifto.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
